[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/TrapPole.gd" type="Script" id=1]
[ext_resource path="res://Art/Obstacles/trapPole.png" type="Texture" id=2]
[ext_resource path="res://Art/Obstacles/trapPole_reload1.png" type="Texture" id=3]
[ext_resource path="res://Art/Obstacles/trapPole_reload2.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "reload",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 32 )

[sub_resource type="CircleShape2D" id=3]
radius = 300.0

[node name="SpikePole" type="Node2D"]
position = Vector2( 200, 300 )
script = ExtResource( 1 )

[node name="Pole" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "reload"
speed_scale = 2.0

[node name="StaticBody2D" type="StaticBody2D" parent="Pole"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pole/StaticBody2D"]
visible = false
position = Vector2( -2.17201, 0.724014 )
shape = SubResource( 2 )

[node name="ReloadTimer" type="Timer" parent="Pole"]
wait_time = 1.5
one_shot = true

[node name="Area2D" type="Area2D" parent="Pole"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pole/Area2D"]
shape = SubResource( 3 )

[connection signal="timeout" from="Pole/ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="body_entered" from="Pole/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Pole/Area2D" to="." method="_on_Area2D_body_exited"]
